[package]
name = "peekmore"
version = "0.5.5"
authors = ["foresterre <garm@ilumeo.com>"]
description = "Iterator which can peek forward multiple elements."
edition = "2018"
repository = "https://github.com/foresterre/peekmore"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/peekmore"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
]
keywords = ["peek", "lookahead", "iterator", "peekable", "multipeek"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smallvec"]

[dependencies.smallvec]
version = "1.4.0"
optional = true
default-features = false
