[package]
name = "peekmore"
version = "1.0.0"
authors = ["foresterre <garm@ilumeo.com>"]
description = "Iterator which can peek forward multiple elements."
edition = "2018"
repository = "https://github.com/foresterre/peekmore"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/peekmore"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
]
keywords = ["peek", "lookahead", "iterator", "peekable", "multipeek"]
categories = ["no-std"]

[package.metadata]
msrv = "1.40.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies.smallvec]
version = "1.5.1"
optional = true
default-features = false
